# supybot-fedora

./: .cico.pipeline  .coveragerc  .gitignore  .gitmodules  Makefile  README.md  README.txt  TODO.txt  Vagrantfile  __init__.py  config.py  plugin.py  pyproject.toml  requirements.txt  supybot-fedora.spec  test.py  tox.ini
.github/workflows/: tests.yml
devel/ansible/roles/dev/files/: .bashrc  gssproxy-supybot.conf  ngircd.conf  supybot.service
devel/ansible/roles/dev/files/supybot/: supybot.conf
devel/ansible/roles/dev/files/supybot-fedora/: supybot-fedora.conf
devel/ansible/roles/dev/files/supybot/data/web/: default.css.example  index.html.example
devel/ansible/roles/dev/files/supybot/data/web/generic/: error.html.example
devel/ansible/roles/dev/tasks/: main.yml
fedmsg.d/: zodbot.py
supybot_fedora/: __init__.py  config.py  plugin.py  test.py
