[tool.poetry]
name = "supybot-fedora"
version = "0.5.3"
description = "A Lemnoria (supybot) plugin for various Fedora actions"

license = "BSD-3-Clause"

authors = [
  "Mike McGrath <mmcgrath@redhat.com>",
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/supybot-fedora"
homepage = "https://github.com/fedora-infra/supybot-fedora"

classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

include = [
    "tox.ini",
]

[tool.poetry.dependencies]
python = "^3.7"
python-fedora = "^1.0.0"
limnoria = "^2020.07.01"
requests = "^2.24.0"
arrow = "^0.15.7"
packagedb-cli = "^2.14.1"
pyyaml = "^5.3.1"
simplejson = "^3.17.2"
pytz = "^2020.1"
sgmllib3k = "^1.0.0"
fasjson-client = "^1.0.0"

[tool.poetry.dev-dependencies]
mock = "^4.0"
black = "^23.0.0"
flake8 = "^3.7"
coverage = "^5.5"
tox = "^4.5.1"


[tool.poetry.plugins."limnoria.plugins"]
"Fedora" = "supybot_fedora"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
